# ml-classify

./: .gitignore  README.md  pyproject.toml
dataset-files/ROAD/: data.csv
dataset-files/Survival/: data.csv
images/: ROAD_correlation_heatmap.pgf
ml_classify/: RF_Survival.joblib  Survival_correlation_heatmap.pgf  ae-book.ipynb  check-dataset.py  compare-book.ipynb  compiledataset.py  compiledataset_old.py  compiledataset_reveng.py  compiledataset_win.py  dnn-book.ipynb  dnn_survival_all_shap  dt-book.ipynb  explain-data.py  lm-book.ipynb  load_signal_road.py  lrp_tools.py  main-notebook.ipynb  nn.py  plot-dataset.py  plot_tools.py  pp_tools.py  preprocess.py  reveng-dataset.ipynb  rf-book.ipynb  rf_survival_all_shap  shap-book.ipynb  shap_tools.py  study-dataset.py  survey-book.ipynb  test-dataset.py  visexp-book.ipynb  visexp_script.py
ml_classify/datamining/: mar10_dataset  test-linuxdata.py
ml_classify/dnn_all_hisingen/: keras_metadata.pb  saved_model.pb
ml_classify/dnn_all_hisingen/variables/: variables.data-00000-of-00001  variables.index
ml_classify/dnn_all_hisingen_imbalanced/: keras_metadata.pb  saved_model.pb
ml_classify/dnn_all_road/: saved_model.pb
ml_classify/dnn_all_road_imbalanced/: saved_model.pb
ml_classify/dnn_all_survival/: saved_model.pb
ml_classify/dnn_all_survival_imbalanced/: keras_metadata.pb  saved_model.pb
ml_classify/dnn_masq_road/: saved_model.pb
ml_classify/dnn_masq_road_imbalanced/: saved_model.pb
ml_classify/my_dir/helloworld/: oracle.json
ml_classify/survey/: survey_answers.csv
tests/: test_ml_classify.py
(+24 files in other folders)
