[tool.poetry]
name = "ml-classify"
version = "0.1.0"
description = ""
authors = ["hampu5 <halu1701@student.miun.se>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
shap = "^0.40.0"
tensorflow = "^2.7.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
